# ChangeLog for dev-db/sqlite
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.462 2013/03/12 23:05:08 floppym Exp $

  12 Mar 2013; Mike Gilbert <floppym@gentoo.org> sqlite-3.7.15.2.ebuild:
  Restore epunt_cxx() in amalgamation tarballs. Patch by Arfrever.

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for sh, wrt bug #458800

  28 Feb 2013; Jeroen Roovers <jer@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for HPPA (bug #458800).

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for s390, wrt bug #458800

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for alpha, wrt bug #458800

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for arm, wrt bug #458800

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for sparc, wrt bug #458800

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for ia64, wrt bug #458800

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for x86, wrt bug #458800

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for amd64, wrt bug #458800

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for ppc64, wrt bug #458800

  23 Feb 2013; Mike Gilbert <floppym@gentoo.org> sqlite-3.7.15.2.ebuild:
  Drop epunt_cxx, bug 458906.

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> sqlite-3.7.15.2.ebuild:
  Stable for ppc, wrt bug #458800

  20 Feb 2013; Zac Medico <zmedico@gentoo.org> sqlite-3.7.15.2.ebuild:
  Add ~arm-linux keyword.

  20 Jan 2013; Mike Gilbert <floppym@gentoo.org> -sqlite-3.7.12.1.ebuild,
  -sqlite-3.7.13.ebuild, -sqlite-3.7.15.1.ebuild, -sqlite-3.7.15.ebuild:
  Remove old per Arfrever.

  18 Jan 2013; Mike Gilbert <floppym@gentoo.org> sqlite-3.7.15.2.ebuild: