@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.462 2013/03/12 23:05:08 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.463 2013/03/19 23:18:24 floppym Exp $
+
+*sqlite-3.7.16 (19 Mar 2013)
+
+  19 Mar 2013; Mike Gilbert <floppym@gentoo.org> +sqlite-3.7.16.ebuild:
+  Version bump. Delete "fts3", "soundex", "threadsafe" and "unlock-notify" USE
+  flags and enable given features unconditionally. Ebuild by Arfrever.
 
   12 Mar 2013; Mike Gilbert <floppym@gentoo.org> sqlite-3.7.15.2.ebuild:
   Restore epunt_cxx() in amalgamation tarballs. Patch by Arfrever.
